--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,18 @@ body {
 a {
   color: #00B7FF;
 }
+
+.roseAttr {
+  background-color: aquamarine;
+  width: 120px;
+ }
+
+
+ .roseAttr {
+  background-color: rgb(233, 9, 13);
+  width: 150px;
+  padding: 10px 10px 10px 10px;
+  margin: 5px 10px;
+  display: inline-block;
+  border: 2px solid rgba(10, 10, 11, 0.975);
+  }
